# dotfill

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: publish.yml
dev/docs/: design-specification.md  implementation-plan.md  requirements.md
docs/: config-schema.md  getting-started.md  troubleshooting.md
src/dotfill/: __init__.py  __main__.py  api.py  cli.py  config.py  config_loader.py  config_merge.py  config_models.py  config_paths.py  entrypoints.py  envdoc.py  errors.py  icons.py  identity.py  identity_facts.py  identity_rules.py  import_scan.py  logging_config.py  models.py  open_paths.py  paths.py  resolver.py  save.py  server.py  service_test.py  value_policy.py
src/dotfill/static/: app.css  app.js  import_mapping_status.js  import_source_state.js  import_test_state.js  index.html  theme_state.js
tests/: helpers.py  test_api.py  test_cli.py  test_config.py  test_config_loader.py  test_config_paths.py  test_entrypoints.py  test_envdoc.py  test_frontend_import_mapping_status.py  test_frontend_import_source_state.py  test_frontend_import_test_state.py  test_frontend_refresh_error_state.py  test_frontend_theme_state.py  test_identity.py  test_identity_facts.py  test_identity_rules.py  test_import_scan.py  test_open_paths.py  test_resolver.py  test_save.py  test_server.py  test_service_test.py  test_static_assets.py
