[project]
name = "dotfill"
version = "0.1.0"
description = "Local-only helper to populate and maintain a personal .env file with API tokens and identity variables"
readme = "README.md"
authors = [
    { name = "Osama Masoud" }
]
requires-python = ">=3.14"
dependencies = [
    "typer>=0.12",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.8",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "platformdirs>=4.10.0",
]

[project.scripts]
dotfill = "dotfill.entrypoints:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.14",
    "respx>=0.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]


[tool.uv]
exclude-newer = "2 days" # Exclude packages released in the last 2 days as a protection against undiscovered supply chain vulnerabilities.
