[project]
name = "dotfill"
version = "1.0.0"
description = "Local-only helper to populate and maintain a personal .env file with API tokens and identity variables"
readme = "README.md"
authors = [
    { name = "Osama Masoud", email = "osama.masoud@gmail.com"}
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.14"
keywords = ["api-tokens", "dotenv", "env", "local-first", "secrets"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.8",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "platformdirs>=4.10.0",
]

[project.scripts]
dotfill = "dotfill.entrypoints:main"

[project.urls]
Homepage = "https://github.com/omasoud/dotfill"
Repository = "https://github.com/omasoud/dotfill"
Documentation = "https://github.com/omasoud/dotfill/tree/main/docs"
Issues = "https://github.com/omasoud/dotfill/issues"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.14",
    "respx>=0.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]


[tool.uv]
exclude-newer = "2 days" # Exclude packages released in the last 2 days as a protection against undiscovered supply chain vulnerabilities.
